--- a/app/src/main/res/layout-w900dp/item_list.xml
+++ b/app/src/main/res/layout-w900dp/item_list.xml
@@ -18,17 +18,17 @@
     
     -->
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                                            xmlns:tools="http://schemas.android.com/tools"
-                                            android:id="@+id/item_list"
-                                            android:name="com.sample.wireviewer.ItemListFragment"
-                                            android:layout_width="@dimen/item_width"
-                                            android:layout_height="match_parent"
-                                            android:layout_marginLeft="16dp"
-                                            android:layout_marginRight="16dp"
-                                            app:layoutManager="LinearLayoutManager"
-                                            tools:context="com.sample.wireviewer.characterlist.CharacterListActivity"
-                                            tools:listitem="@layout/item_list_content"/>
+    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+                                               xmlns:tools="http://schemas.android.com/tools"
+                                               android:id="@+id/item_list"
+                                               android:name="com.sample.wireviewer.ItemListFragment"
+                                               android:layout_width="@dimen/item_width"
+                                               android:layout_height="match_parent"
+                                               android:layout_marginLeft="16dp"
+                                               android:layout_marginRight="16dp"
+                                               app:layoutManager="LinearLayoutManager"
+                                               tools:context="com.sample.wireviewer.characterlist.CharacterListActivity"
+                                               tools:listitem="@layout/item_list_content"/>
 
     <FrameLayout
             android:id="@+id/item_detail_container"
