--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                                           xmlns:app="http://schemas.android.com/apk/res-auto"
-                                           xmlns:tools="http://schemas.android.com/tools"
-                                           android:id="@+id/item_list"
-                                           android:name="com.sample.wireviewer.ItemListFragment"
-                                           android:layout_width="match_parent"
-                                           android:layout_height="match_parent"
-                                           android:layout_marginLeft="16dp"
-                                           android:layout_marginRight="16dp"
-                                           app:layoutManager="LinearLayoutManager"
-                                           tools:context=".characterlist.CharacterListActivity"
-                                           tools:listitem="@layout/item_list_content"/>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+<androidx.recyclerview.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_list"
+    android:name="com.sample.wireviewer.ItemListFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layoutManager="LinearLayoutManager"
+    tools:context=".characterlist.CharacterListActivity"
+    tools:listitem="@layout/view_list_item" />
+</LinearLayout>
