--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -13,6 +13,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".characterlist.CharacterListActivity"
+    tools:context=".ui.CharacterListActivity"
     tools:listitem="@layout/view_list_item" />
 </LinearLayout>
