--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -5,7 +5,7 @@
                                                      android:layout_width="match_parent"
                                                      android:layout_height="match_parent"
                                                      android:fitsSystemWindows="true"
-                                                     tools:context=".characterdetail.CharacterDetailActivity"
+                                                     tools:context=".ui.characterdetail.CharacterDetailActivity"
                                                      tools:ignore="MergeRootFrame">
 
     <com.google.android.material.appbar.AppBarLayout
